--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- 시작 화면 -->
     <div id="start-screen" class="screen active">
         <div class="container">
-            <h1 class="title">2025 한슬 상품 추첨</h1>
+            <h1 class="title">🎉2025 한슬 상품 추첨🎉</h1>
             <button id="start-btn" class="btn btn-primary">추첨 시작</button>
         </div>
     </div>
